# AddressBookInterface

./: CMakeLists.txt  DemoApp.cpp  README.md
header/: CAddressBook.h  CAddressBookManager.h  CAddressBookTrie.h
headers/: CAddressBookManager.h  CSimpleAddressBook.h
interface/: AddressBookCommon.h  AddressBookInterface.h  AddressBookTypes.h
interfaces/: SimpleAddressBook.h  SimpleAddressBookTypes.h
source/: AddressBookInterface.cpp  AddressBookTypes.cpp  CAddressBook.cpp  CAddressBookManager.cpp  CAddressBookTrie.cpp  CSimpleAddressBook.cpp  SimpleAddressBook.cpp  SimpleAddressBookTypes.cpp  main.cpp
